examples-2/nginx-with-label.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    team: engineer 
    version: 1.0.0
    env: prod
spec:
  containers:
    - name: nginx
      image: nginx
      ports:
        - containerPort: 80
