examples-2/service-hello-world.yaml

apiVersion: v1
kind: Service
metadata:
  name: hello-world-rest-api-service
spec:
  selector:
    name: hello-world-rest-api
  ports:
    - port: 8080
      targetPort: 8080
