examples-2/service-nginx-ingress.yaml

apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    name: nginx
  ports:
    - port: 80
      targetPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: hello-world-rest-api-service
spec:
  selector:
    name: hello-world-rest-api
  ports:
    - port: 8080
      targetPort: 8080

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  labels:
    name: nginx-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
          - path: /hello-world
            pathType: Prefix
            backend:
              service:
                name: hello-world-rest-api-service
                port:
                  number: 8080
